src/parser.output
Nonterminals useless in grammar

   Binary_OP


Terminals unused in grammar

   NULLPOINTER
   ASSIGN


Rules useless in grammar

  253 Binary_OP: LOGAND
  254          | LOGOR
  255          | Rel_OP
  256          | Add_OP
  257          | Mul_OP


State 75 conflicts: 1 reduce/reduce
State 129 conflicts: 3 shift/reduce
State 136 conflicts: 1 shift/reduce
State 141 conflicts: 4 shift/reduce
State 142 conflicts: 7 shift/reduce
State 177 conflicts: 2 reduce/reduce
State 261 conflicts: 2 reduce/reduce
State 309 conflicts: 4 shift/reduce
State 310 conflicts: 7 shift/reduce


Grammar

    0 $accept: SourceFile $end

    1 SourceFile: PackageClause SCOLON
    2           | PackageClause SCOLON ImportDeclList
    3           | PackageClause SCOLON TopLevelDeclList
    4           | PackageClause SCOLON ImportDeclList TopLevelDeclList

    5 PackageClause: PACKAGE PackageName

    6 PackageName: IDENTIFIER

    7 ImportDeclList: ImportDeclList ImportDecl SCOLON
    8               | ImportDecl SCOLON

    9 ImportDecl: IMPORT LEFTPARAN ImportSpecList RIGHTPARAN
   10           | IMPORT LEFTPARAN RIGHTPARAN
   11           | IMPORT ImportSpec

   12 ImportSpecList: ImportSpecList ImportSpec SCOLON
   13               | ImportSpec SCOLON

   14 ImportSpec: PackageName ImportPath
   15           | DOT ImportPath
   16           | ImportPath

   17 ImportPath: String

   18 TopLevelDeclList: TopLevelDeclList TopLevelDecl SCOLON
   19                 | TopLevelDecl SCOLON

   20 TopLevelDecl: Declaration
   21             | FunctionDecl
   22             | MethodDecl

   23 Block: LEFTBRACE StatementList RIGHTBRACE

   24 Condition: Expression

   25 StatementList: StatementList Statement SCOLON
   26              | Statement SCOLON

   27 Statement: Declaration
   28          | LabeledStmt
   29          | SimpleStmt
   30          | ReturnStmt
   31          | BreakStmt
   32          | ContinueStmt
   33          | GotoStmt
   34          | SwitchStmt
   35          | FallthroughStmt
   36          | Block
   37          | IfStmt
   38          | ForStmt

   39 Declaration: TypeDecl
   40            | VarDecl
   41            | ConstDecl

   42 FunctionDecl: FUNC FunctionName Signature FunctionBody
   43             | FUNC FunctionName Signature

   44 FunctionName: IDENTIFIER

   45 MethodDecl: FUNC Receiver IDENTIFIER Signature
   46           | FUNC Receiver IDENTIFIER Signature FunctionBody

   47 LabeledStmt: Label COLON Statement

   48 Label: IDENTIFIER

   49 SimpleStmt: EmptyStmt
   50           | ExpressionStmt
   51           | IncDecStmt
   52           | Assignment
   53           | ShortVarDecl

   54 EmptyStmt: %empty

   55 ExpressionStmt: Expression

   56 IncDecStmt: Expression PLUSPLUS
   57           | Expression MINUSMINUS

   58 Assignment: ExpressionList Assign_OP ExpressionList

   59 ShortVarDecl: IdentifierList INFER_EQ ExpressionList

   60 VarDecl: VAR VarSpec
   61        | VAR LEFTPARAN VarSpecList RIGHTPARAN
   62        | VAR LEFTPARAN RIGHTPARAN

   63 VarSpecList: VarSpecList VarSpec SCOLON
   64            | VarSpec SCOLON

   65 VarSpec: IdentifierList Type
   66        | IdentifierList Type EQ ExpressionList
   67        | IdentifierList EQ ExpressionList

   68 ConstDecl: CONST ConstSpec
   69          | CONST LEFTPARAN ConstSpecList RIGHTPARAN
   70          | CONST LEFTPARAN RIGHTPARAN

   71 ConstSpecList: ConstSpecList ConstSpec SCOLON
   72              | ConstSpec SCOLON

   73 ConstSpec: IdentifierList Type
   74          | IdentifierList Type EQ ExpressionList
   75          | IdentifierList EQ ExpressionList

   76 FunctionBody: Block

   77 Signature: Parameters
   78          | Parameters Result

   79 Result: Parameters
   80       | Type

   81 Parameters: LEFTPARAN RIGHTPARAN
   82           | LEFTPARAN ParameterList RIGHTPARAN
   83           | LEFTPARAN ParameterList COMMA RIGHTPARAN

   84 ParameterList: ParameterDecl
   85              | ParameterList COMMA ParameterDecl

   86 ParameterDecl: IdentifierList Type
   87              | IdentifierList ELIPSIS Type
   88              | ELIPSIS Type

   89 IdentifierList: IdentifierList COMMA IDENTIFIER
   90               | IDENTIFIER

   91 QualifiedIdent: PackageName DOT IDENTIFIER

   92 Receiver: Parameters

   93 CompositeLit: LiteralType LiteralValue

   94 LiteralType: StructType
   95            | ArrayType
   96            | PointerType
   97            | SliceType
   98            | LEFTSQUARE ELIPSIS RIGHTSQUARE Operand
   99            | MapType

  100 Type: LiteralType
  101     | OperandName

  102 Operand: Literal
  103        | OperandName
  104        | LEFTPARAN Expression RIGHTPARAN

  105 OperandName: IDENTIFIER
  106            | QualifiedIdent

  107 LiteralValue: LEFTBRACE RIGHTBRACE
  108             | LEFTBRACE ElementList RIGHTBRACE
  109             | LEFTBRACE ElementList COMMA RIGHTBRACE

  110 SliceType: LEFTSQUARE RIGHTSQUARE Type

  111 ElementList: KeyedElement
  112            | ElementList COMMA KeyedElement

  113 KeyedElement: Element
  114             | Key COLON Element

  115 Key: Expression
  116    | LiteralValue

  117 Element: Expression
  118        | LiteralValue

  119 ReturnStmt: RETURN
  120           | RETURN ExpressionList

  121 BreakStmt: BREAK
  122          | BREAK Label

  123 ContinueStmt: CONTINUE
  124             | CONTINUE Label

  125 GotoStmt: GOTO Label

  126 SwitchStmt: ExprSwitchStmt

  127 ExprSwitchStmt: SWITCH LEFTBRACE RIGHTBRACE
  128               | SWITCH SimpleStmt SCOLON LEFTBRACE RIGHTBRACE
  129               | SWITCH Expression LEFTBRACE RIGHTBRACE
  130               | SWITCH SimpleStmt SCOLON Expression LEFTBRACE RIGHTBRACE
  131               | SWITCH LEFTBRACE ExprCaseClauseList RIGHTBRACE
  132               | SWITCH SimpleStmt SCOLON LEFTBRACE ExprCaseClauseList RIGHTBRACE
  133               | SWITCH Expression LEFTBRACE ExprCaseClauseList RIGHTBRACE
  134               | SWITCH SimpleStmt SCOLON Expression LEFTBRACE ExprCaseClauseList RIGHTBRACE

  135 ExprCaseClauseList: ExprCaseClauseList ExprCaseClause
  136                   | ExprCaseClause

  137 ExprCaseClause: ExprSwitchCase COLON StatementList

  138 ExprSwitchCase: CASE ExpressionList
  139               | DEFAULT

  140 FallthroughStmt: FALLTHROUGH

  141 IfStmt: IF Expression Block
  142       | IF SimpleStmt SCOLON Expression Block
  143       | IF Expression Block ELSE IfStmt
  144       | IF Expression Block ELSE Block
  145       | IF SimpleStmt SCOLON Expression Block ELSE IfStmt
  146       | IF SimpleStmt SCOLON Expression Block ELSE Block

  147 ForStmt: FOR Block
  148        | FOR ForClause Block
  149        | FOR Condition Block
  150        | FOR RangeClause Block

  151 ForClause: InitStmt SCOLON SCOLON PostStmt
  152          | InitStmt SCOLON Condition SCOLON PostStmt

  153 InitStmt: SimpleStmt

  154 PostStmt: SimpleStmt

  155 RangeClause: RANGE Expression
  156            | IdentifierList INFER_EQ RANGE Expression
  157            | ExpressionList EQ RANGE Expression

  158 Expression: ExpressionOR

  159 ExpressionOR: ExpressionOR LOGOR ExpressionAND
  160             | ExpressionAND

  161 ExpressionAND: ExpressionAND LOGAND ExpressionREL
  162              | ExpressionREL

  163 ExpressionREL: ExpressionREL Rel_OP ExpressionADD
  164              | ExpressionADD

  165 ExpressionADD: ExpressionADD Add_OP ExpressionMUL
  166              | ExpressionMUL

  167 ExpressionMUL: ExpressionMUL Mul_OP PrimaryExpr
  168              | UnaryExpr

  169 UnaryExpr: PrimaryExpr
  170          | Unary_OP PrimaryExpr

  171 PrimaryExpr: Operand
  172            | MakeExpr
  173            | PrimaryExpr Selector
  174            | PrimaryExpr Index
  175            | PrimaryExpr Slice
  176            | PrimaryExpr Arguments
  177            | OperandName StructLiteral
  178            | PrimaryExpr TypeAssertion

  179 StructLiteral: LEFTBRACE KeyValueList RIGHTBRACE

  180 KeyValueList: Expression COLON Expression
  181             | Expression COLON Expression COMMA KeyValueList

  182 Selector: DOT IDENTIFIER

  183 Index: LEFTSQUARE Expression RIGHTSQUARE

  184 Slice: LEFTSQUARE COLON Expression RIGHTSQUARE
  185      | LEFTSQUARE COLON RIGHTSQUARE
  186      | LEFTSQUARE Expression COLON RIGHTSQUARE
  187      | LEFTSQUARE Expression COLON Expression RIGHTSQUARE
  188      | LEFTSQUARE COLON Expression COLON Expression RIGHTSQUARE
  189      | LEFTSQUARE Expression COLON Expression COLON Expression RIGHTSQUARE

  190 MakeExpr: MAKE LEFTPARAN Type COMMA Expression COMMA Expression RIGHTPARAN
  191         | MAKE LEFTPARAN Type COMMA Expression RIGHTPARAN
  192         | MAKE LEFTPARAN Type RIGHTPARAN
  193         | NEW LEFTPARAN Type RIGHTPARAN

  194 TypeAssertion: DOT LEFTPARAN Type RIGHTPARAN

  195 Arguments: LEFTPARAN RIGHTPARAN
  196          | LEFTPARAN ExpressionList ELIPSIS RIGHTPARAN

  197 ExpressionList: Expression
  198               | Expression COMMA Expression

  199 TypeDecl: TYPE LEFTPARAN TypeSpecList RIGHTPARAN
  200         | TYPE TypeSpec

  201 TypeSpecList: TypeSpecList TypeSpec SCOLON
  202             | TypeSpec SCOLON

  203 TypeSpec: AliasDecl
  204         | TypeDef

  205 AliasDecl: IDENTIFIER EQ Type

  206 TypeDef: IDENTIFIER Type

  207 MapType: MAP LEFTSQUARE Type RIGHTSQUARE Type

  208 StructType: STRUCT LEFTBRACE FieldDeclList RIGHTBRACE
  209           | STRUCT LEFTBRACE RIGHTBRACE

  210 FieldDeclList: FieldDecl SCOLON
  211              | FieldDeclList FieldDecl SCOLON

  212 FieldDecl: IdentifierList Type String
  213          | IdentifierList Type

  214 PointerType: MUL BaseType

  215 BaseType: Type

  216 ArrayType: LEFTSQUARE Expression RIGHTSQUARE Type

  217 Literal: BasicLit
  218        | CompositeLit

  219 BasicLit: INTEGER_VAL
  220         | FLOAT_VAL
  221         | BYTE_VAL
  222         | String
  223         | TRUE
  224         | FALSE

  225 String: RAW_STRING
  226       | INTERPRETED_STRING

  227 Assign_OP: EQ
  228          | Add_OP EQ
  229          | Mul_OP EQ

  230 Add_OP: ADD
  231       | SUB
  232       | OR
  233       | XOR

  234 Rel_OP: ISEQ
  235       | NEQ
  236       | LESSEQ
  237       | GRTEQ
  238       | GRT
  239       | LESS

  240 Mul_OP: MUL
  241       | QUOT
  242       | MOD
  243       | SHL
  244       | SHR
  245       | AND
  246       | ANDNOT

  247 Unary_OP: ADD
  248         | SUB
  249         | NOT
  250         | XOR
  251         | MUL
  252         | AND


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER_VAL (258) 219
FLOAT_VAL (259) 220
TRUE (260) 223
FALSE (261) 224
NULLPOINTER (262)
BREAK (263) 121 122
CONTINUE (264) 123 124
RETURN (265) 119 120
SCOLON (266) 1 2 3 4 7 8 12 13 18 19 25 26 63 64 71 72 128 130 132
    134 142 145 146 151 152 201 202 210 211
FUNC (267) 42 43 45 46
STRUCT (268) 208 209
ELSE (269) 143 144 145 146
PACKAGE (270) 5
IF (271) 141 142 143 144 145 146
FOR (272) 147 148 149 150
RANGE (273) 155 156 157
IMPORT (274) 9 10 11
VAR (275) 60 61 62
SWITCH (276) 127 128 129 130 131 132 133 134
CASE (277) 138
NEW (278) 193
CONST (279) 68 69 70
MAP (280) 207
DEFAULT (281) 139
MAKE (282) 190 191 192
GOTO (283) 125
FALLTHROUGH (284) 140
TYPE (285) 199 200
PLUSPLUS (286) 56
MINUSMINUS (287) 57
ANDNOT (288) 246
ELIPSIS (289) 87 88 98 196
ADD (290) 230 247
SUB (291) 231 248
NOT (292) 249
XOR (293) 233 250
MUL (294) 214 240 251
AND (295) 245 252
OR (296) 232
LOGOR (297) 159
LOGAND (298) 161
ISEQ (299) 234
NEQ (300) 235
LESSEQ (301) 236
GRTEQ (302) 237
GRT (303) 238
LESS (304) 239
MOD (305) 242
QUOT (306) 241
SHL (307) 243
SHR (308) 244
EQ (309) 66 67 74 75 157 205 227 228 229
INFER_EQ (310) 59 156
RIGHTPARAN (311) 9 10 61 62 69 70 81 82 83 104 190 191 192 193 194
    195 196 199
RIGHTBRACE (312) 23 107 108 109 127 128 129 130 131 132 133 134 179
    208 209
RIGHTSQUARE (313) 98 110 183 184 185 186 187 188 189 207 216
LEFTPARAN (314) 9 10 61 62 69 70 81 82 83 104 190 191 192 193 194 195
    196 199
LEFTBRACE (315) 23 107 108 109 127 128 129 130 131 132 133 134 179
    208 209
LEFTSQUARE (316) 98 110 183 184 185 186 187 188 189 207 216
COLON (317) 47 114 137 180 181 184 185 186 187 188 189
DOT (318) 15 91 182 194
COMMA (319) 83 85 89 109 112 181 190 191 198
RAW_STRING (320) 225
INTERPRETED_STRING (321) 226
BYTE_VAL (322) 221
IDENTIFIER (323) 6 44 45 46 48 89 90 91 105 182 205 206
ASSIGN (324)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
SourceFile (71)
    on left: 1 2 3 4, on right: 0
PackageClause (72)
    on left: 5, on right: 1 2 3 4
PackageName (73)
    on left: 6, on right: 5 14 91
ImportDeclList (74)
    on left: 7 8, on right: 2 4 7
ImportDecl (75)
    on left: 9 10 11, on right: 7 8
ImportSpecList (76)
    on left: 12 13, on right: 9 12
ImportSpec (77)
    on left: 14 15 16, on right: 11 12 13
ImportPath (78)
    on left: 17, on right: 14 15 16
TopLevelDeclList (79)
    on left: 18 19, on right: 3 4 18
TopLevelDecl (80)
    on left: 20 21 22, on right: 18 19
Block (81)
    on left: 23, on right: 36 76 141 142 143 144 145 146 147 148 149
    150
Condition (82)
    on left: 24, on right: 149 152
StatementList (83)
    on left: 25 26, on right: 23 25 137
Statement (84)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38, on right: 25 26 47
Declaration (85)
    on left: 39 40 41, on right: 20 27
FunctionDecl (86)
    on left: 42 43, on right: 21
FunctionName (87)
    on left: 44, on right: 42 43
MethodDecl (88)
    on left: 45 46, on right: 22
LabeledStmt (89)
    on left: 47, on right: 28
Label (90)
    on left: 48, on right: 47 122 124 125
SimpleStmt (91)
    on left: 49 50 51 52 53, on right: 29 128 130 132 134 142 145 146
    153 154
EmptyStmt (92)
    on left: 54, on right: 49
ExpressionStmt (93)
    on left: 55, on right: 50
IncDecStmt (94)
    on left: 56 57, on right: 51
Assignment (95)
    on left: 58, on right: 52
ShortVarDecl (96)
    on left: 59, on right: 53
VarDecl (97)
    on left: 60 61 62, on right: 40
VarSpecList (98)
    on left: 63 64, on right: 61 63
VarSpec (99)
    on left: 65 66 67, on right: 60 63 64
ConstDecl (100)
    on left: 68 69 70, on right: 41
ConstSpecList (101)
    on left: 71 72, on right: 69 71
ConstSpec (102)
    on left: 73 74 75, on right: 68 71 72
FunctionBody (103)
    on left: 76, on right: 42 46
Signature (104)
    on left: 77 78, on right: 42 43 45 46
Result (105)
    on left: 79 80, on right: 78
Parameters (106)
    on left: 81 82 83, on right: 77 78 79 92
ParameterList (107)
    on left: 84 85, on right: 82 83 85
ParameterDecl (108)
    on left: 86 87 88, on right: 84 85
IdentifierList (109)
    on left: 89 90, on right: 59 65 66 67 73 74 75 86 87 89 156 212
    213
QualifiedIdent (110)
    on left: 91, on right: 106
Receiver (111)
    on left: 92, on right: 45 46
CompositeLit (112)
    on left: 93, on right: 218
LiteralType (113)
    on left: 94 95 96 97 98 99, on right: 93 100
Type (114)
    on left: 100 101, on right: 65 66 73 74 80 86 87 88 110 190 191
    192 193 194 205 206 207 212 213 215 216
Operand (115)
    on left: 102 103 104, on right: 98 171
OperandName (116)
    on left: 105 106, on right: 101 103 177
LiteralValue (117)
    on left: 107 108 109, on right: 93 116 118
SliceType (118)
    on left: 110, on right: 97
ElementList (119)
    on left: 111 112, on right: 108 109 112
KeyedElement (120)
    on left: 113 114, on right: 111 112
Key (121)
    on left: 115 116, on right: 114
Element (122)
    on left: 117 118, on right: 113 114
ReturnStmt (123)
    on left: 119 120, on right: 30
BreakStmt (124)
    on left: 121 122, on right: 31
ContinueStmt (125)
    on left: 123 124, on right: 32
GotoStmt (126)
    on left: 125, on right: 33
SwitchStmt (127)
    on left: 126, on right: 34
ExprSwitchStmt (128)
    on left: 127 128 129 130 131 132 133 134, on right: 126
ExprCaseClauseList (129)
    on left: 135 136, on right: 131 132 133 134 135
ExprCaseClause (130)
    on left: 137, on right: 135 136
ExprSwitchCase (131)
    on left: 138 139, on right: 137
FallthroughStmt (132)
    on left: 140, on right: 35
IfStmt (133)
    on left: 141 142 143 144 145 146, on right: 37 143 145
ForStmt (134)
    on left: 147 148 149 150, on right: 38
ForClause (135)
    on left: 151 152, on right: 148
InitStmt (136)
    on left: 153, on right: 151 152
PostStmt (137)
    on left: 154, on right: 151 152
RangeClause (138)
    on left: 155 156 157, on right: 150
Expression (139)
    on left: 158, on right: 24 55 56 57 104 115 117 129 130 133 134
    141 142 143 144 145 146 155 156 157 180 181 183 184 186 187 188
    189 190 191 197 198 216
ExpressionOR (140)
    on left: 159 160, on right: 158 159
ExpressionAND (141)
    on left: 161 162, on right: 159 160 161
ExpressionREL (142)
    on left: 163 164, on right: 161 162 163
ExpressionADD (143)
    on left: 165 166, on right: 163 164 165
ExpressionMUL (144)
    on left: 167 168, on right: 165 166 167
UnaryExpr (145)
    on left: 169 170, on right: 168
PrimaryExpr (146)
    on left: 171 172 173 174 175 176 177 178, on right: 167 169 170
    173 174 175 176 178
StructLiteral (147)
    on left: 179, on right: 177
KeyValueList (148)
    on left: 180 181, on right: 179 181
Selector (149)
    on left: 182, on right: 173
Index (150)
    on left: 183, on right: 174
Slice (151)
    on left: 184 185 186 187 188 189, on right: 175
MakeExpr (152)
    on left: 190 191 192 193, on right: 172
TypeAssertion (153)
    on left: 194, on right: 178
Arguments (154)
    on left: 195 196, on right: 176
ExpressionList (155)
    on left: 197 198, on right: 58 59 66 67 74 75 120 138 157 196
TypeDecl (156)
    on left: 199 200, on right: 39
TypeSpecList (157)
    on left: 201 202, on right: 199 201
TypeSpec (158)
    on left: 203 204, on right: 200 201 202
AliasDecl (159)
    on left: 205, on right: 203
TypeDef (160)
    on left: 206, on right: 204
MapType (161)
    on left: 207, on right: 99
StructType (162)
    on left: 208 209, on right: 94
FieldDeclList (163)
    on left: 210 211, on right: 208 211
FieldDecl (164)
    on left: 212 213, on right: 210 211
PointerType (165)
    on left: 214, on right: 96
BaseType (166)
    on left: 215, on right: 214
ArrayType (167)
    on left: 216, on right: 95
Literal (168)
    on left: 217 218, on right: 102
BasicLit (169)
    on left: 219 220 221 222 223 224, on right: 217
String (170)
    on left: 225 226, on right: 17 212 222
Assign_OP (171)
    on left: 227 228 229, on right: 58
Add_OP (172)
    on left: 230 231 232 233, on right: 165 228
Rel_OP (173)
    on left: 234 235 236 237 238 239, on right: 163
Mul_OP (174)
    on left: 240 241 242 243 244 245 246, on right: 167 229
Unary_OP (175)
    on left: 247 248 249 250 251 252, on right: 170


State 0

    0 $accept: . SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


State 1

    5 PackageClause: PACKAGE . PackageName

    IDENTIFIER  shift, and go to state 4

    PackageName  go to state 5


State 2

    0 $accept: SourceFile . $end

    $end  shift, and go to state 6


State 3

    1 SourceFile: PackageClause . SCOLON
    2           | PackageClause . SCOLON ImportDeclList
    3           | PackageClause . SCOLON TopLevelDeclList
    4           | PackageClause . SCOLON ImportDeclList TopLevelDeclList

    SCOLON  shift, and go to state 7


State 4

    6 PackageName: IDENTIFIER .

    $default  reduce using rule 6 (PackageName)


State 5

    5 PackageClause: PACKAGE PackageName .

    $default  reduce using rule 5 (PackageClause)


State 6

    0 $accept: SourceFile $end .

    $default  accept


State 7

    1 SourceFile: PackageClause SCOLON .
    2           | PackageClause SCOLON . ImportDeclList
    3           | PackageClause SCOLON . TopLevelDeclList
    4           | PackageClause SCOLON . ImportDeclList TopLevelDeclList

    FUNC    shift, and go to state 8
    IMPORT  shift, and go to state 9
    VAR     shift, and go to state 10
    CONST   shift, and go to state 11
    TYPE    shift, and go to state 12

    $default  reduce using rule 1 (SourceFile)

    ImportDeclList    go to state 13
    ImportDecl        go to state 14
    TopLevelDeclList  go to state 15
    TopLevelDecl      go to state 16
    Declaration       go to state 17
    FunctionDecl      go to state 18
    MethodDecl        go to state 19
    VarDecl           go to state 20
    ConstDecl         go to state 21
    TypeDecl          go to state 22


State 8

   42 FunctionDecl: FUNC . FunctionName Signature FunctionBody
   43             | FUNC . FunctionName Signature
   45 MethodDecl: FUNC . Receiver IDENTIFIER Signature
   46           | FUNC . Receiver IDENTIFIER Signature FunctionBody

    LEFTPARAN   shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    FunctionName  go to state 25
    Parameters    go to state 26
    Receiver      go to state 27


State 9

    9 ImportDecl: IMPORT . LEFTPARAN ImportSpecList RIGHTPARAN
   10           | IMPORT . LEFTPARAN RIGHTPARAN
   11           | IMPORT . ImportSpec

    LEFTPARAN           shift, and go to state 28
    DOT                 shift, and go to state 29
    RAW_STRING          shift, and go to state 30
    INTERPRETED_STRING  shift, and go to state 31
    IDENTIFIER          shift, and go to state 4

    PackageName  go to state 32
    ImportSpec   go to state 33
    ImportPath   go to state 34
    String       go to state 35


State 10

   60 VarDecl: VAR . VarSpec
   61        | VAR . LEFTPARAN VarSpecList RIGHTPARAN
   62        | VAR . LEFTPARAN RIGHTPARAN

    LEFTPARAN   shift, and go to state 36
    IDENTIFIER  shift, and go to state 37

    VarSpec         go to state 38
    IdentifierList  go to state 39


State 11

   68 ConstDecl: CONST . ConstSpec
   69          | CONST . LEFTPARAN ConstSpecList RIGHTPARAN
   70          | CONST . LEFTPARAN RIGHTPARAN

    LEFTPARAN   shift, and go to state 40
    IDENTIFIER  shift, and go to state 37

    ConstSpec       go to state 41
    IdentifierList  go to state 42


State 12

  199 TypeDecl: TYPE . LEFTPARAN TypeSpecList RIGHTPARAN
  200         | TYPE . TypeSpec

    LEFTPARAN   shift, and go to state 43
    IDENTIFIER  shift, and go to state 44

    TypeSpec   go to state 45
    AliasDecl  go to state 46
    TypeDef    go to state 47


State 13

    2 SourceFile: PackageClause SCOLON ImportDeclList .
    4           | PackageClause SCOLON ImportDeclList . TopLevelDeclList
    7 ImportDeclList: ImportDeclList . ImportDecl SCOLON

    FUNC    shift, and go to state 8
    IMPORT  shift, and go to state 9
    VAR     shift, and go to state 10
    CONST   shift, and go to state 11
    TYPE    shift, and go to state 12

    $default  reduce using rule 2 (SourceFile)

    ImportDecl        go to state 48
    TopLevelDeclList  go to state 49
    TopLevelDecl      go to state 16
    Declaration       go to state 17
    FunctionDecl      go to state 18
    MethodDecl        go to state 19
    VarDecl           go to state 20
    ConstDecl         go to state 21
    TypeDecl          go to state 22


State 14

    8 ImportDeclList: ImportDecl . SCOLON

    SCOLON  shift, and go to state 50


State 15

    3 SourceFile: PackageClause SCOLON TopLevelDeclList .
   18 TopLevelDeclList: TopLevelDeclList . TopLevelDecl SCOLON

    FUNC   shift, and go to state 8
    VAR    shift, and go to state 10
    CONST  shift, and go to state 11
    TYPE   shift, and go to state 12

    $default  reduce using rule 3 (SourceFile)

    TopLevelDecl  go to state 51
    Declaration   go to state 17
    FunctionDecl  go to state 18
    MethodDecl    go to state 19
    VarDecl       go to state 20
    ConstDecl     go to state 21
    TypeDecl      go to state 22


State 16

   19 TopLevelDeclList: TopLevelDecl . SCOLON

    SCOLON  shift, and go to state 52


State 17

   20 TopLevelDecl: Declaration .

    $default  reduce using rule 20 (TopLevelDecl)


State 18

   21 TopLevelDecl: FunctionDecl .

    $default  reduce using rule 21 (TopLevelDecl)


State 19

   22 TopLevelDecl: MethodDecl .

    $default  reduce using rule 22 (TopLevelDecl)


State 20

   40 Declaration: VarDecl .

    $default  reduce using rule 40 (Declaration)


State 21

   41 Declaration: ConstDecl .

    $default  reduce using rule 41 (Declaration)


State 22

   39 Declaration: TypeDecl .

    $default  reduce using rule 39 (Declaration)


State 23

   81 Parameters: LEFTPARAN . RIGHTPARAN
   82           | LEFTPARAN . ParameterList RIGHTPARAN
   83           | LEFTPARAN . ParameterList COMMA RIGHTPARAN

    ELIPSIS     shift, and go to state 53
    RIGHTPARAN  shift, and go to state 54
    IDENTIFIER  shift, and go to state 37

    ParameterList   go to state 55
    ParameterDecl   go to state 56
    IdentifierList  go to state 57


State 24

   44 FunctionName: IDENTIFIER .

    $default  reduce using rule 44 (FunctionName)


State 25

   42 FunctionDecl: FUNC FunctionName . Signature FunctionBody
   43             | FUNC FunctionName . Signature

    LEFTPARAN  shift, and go to state 23

    Signature   go to state 58
    Parameters  go to state 59


State 26

   92 Receiver: Parameters .

    $default  reduce using rule 92 (Receiver)


State 27

   45 MethodDecl: FUNC Receiver . IDENTIFIER Signature
   46           | FUNC Receiver . IDENTIFIER Signature FunctionBody

    IDENTIFIER  shift, and go to state 60


State 28

    9 ImportDecl: IMPORT LEFTPARAN . ImportSpecList RIGHTPARAN
   10           | IMPORT LEFTPARAN . RIGHTPARAN

    RIGHTPARAN          shift, and go to state 61
    DOT                 shift, and go to state 29
    RAW_STRING          shift, and go to state 30
    INTERPRETED_STRING  shift, and go to state 31
    IDENTIFIER          shift, and go to state 4

    PackageName     go to state 32
    ImportSpecList  go to state 62
    ImportSpec      go to state 63
    ImportPath      go to state 34
    String          go to state 35


State 29

   15 ImportSpec: DOT . ImportPath

    RAW_STRING          shift, and go to state 30
    INTERPRETED_STRING  shift, and go to state 31

    ImportPath  go to state 64
    String      go to state 35


State 30

  225 String: RAW_STRING .

    $default  reduce using rule 225 (String)


State 31

  226 String: INTERPRETED_STRING .

    $default  reduce using rule 226 (String)


State 32

   14 ImportSpec: PackageName . ImportPath

    RAW_STRING          shift, and go to state 30
    INTERPRETED_STRING  shift, and go to state 31

    ImportPath  go to state 65
    String      go to state 35


State 33

   11 ImportDecl: IMPORT ImportSpec .

    $default  reduce using rule 11 (ImportDecl)


State 34

   16 ImportSpec: ImportPath .

    $default  reduce using rule 16 (ImportSpec)


State 35

   17 ImportPath: String .

    $default  reduce using rule 17 (ImportPath)


State 36

   61 VarDecl: VAR LEFTPARAN . VarSpecList RIGHTPARAN
   62        | VAR LEFTPARAN . RIGHTPARAN

    RIGHTPARAN  shift, and go to state 66
    IDENTIFIER  shift, and go to state 37

    VarSpecList     go to state 67
    VarSpec         go to state 68
    IdentifierList  go to state 39


State 37

   90 IdentifierList: IDENTIFIER .

    $default  reduce using rule 90 (IdentifierList)


State 38

   60 VarDecl: VAR VarSpec .

    $default  reduce using rule 60 (VarDecl)


State 39

   65 VarSpec: IdentifierList . Type
   66        | IdentifierList . Type EQ ExpressionList
   67        | IdentifierList . EQ ExpressionList
   89 IdentifierList: IdentifierList . COMMA IDENTIFIER

    STRUCT      shift, and go to state 69
    MAP         shift, and go to state 70
    MUL         shift, and go to state 71
    EQ          shift, and go to state 72
    LEFTSQUARE  shift, and go to state 73
    COMMA       shift, and go to state 74
    IDENTIFIER  shift, and go to state 75

    PackageName     go to state 76
    QualifiedIdent  go to state 77
    LiteralType     go to state 78
    Type            go to state 79
    OperandName     go to state 80
    SliceType       go to state 81
    MapType         go to state 82
    StructType      go to state 83
    PointerType     go to state 84
    ArrayType       go to state 85


State 40

   69 ConstDecl: CONST LEFTPARAN . ConstSpecList RIGHTPARAN
   70          | CONST LEFTPARAN . RIGHTPARAN

    RIGHTPARAN  shift, and go to state 86
    IDENTIFIER  shift, and go to state 37

    ConstSpecList   go to state 87
    ConstSpec       go to state 88
    IdentifierList  go to state 42


State 41

   68 ConstDecl: CONST ConstSpec .

    $default  reduce using rule 68 (ConstDecl)


State 42

   73 ConstSpec: IdentifierList . Type
   74          | IdentifierList . Type EQ ExpressionList
   75          | IdentifierList . EQ ExpressionList
   89 IdentifierList: IdentifierList . COMMA IDENTIFIER

    STRUCT      shift, and go to state 69
    MAP         shift, and go to state 70
    MUL         shift, and go to state 71
    EQ          shift, and go to state 89
    LEFTSQUARE  shift, and go to state 73
    COMMA       shift, and go to state 74
    IDENTIFIER  shift, and go to state 75

    PackageName     go to state 76
    QualifiedIdent  go to state 77
    LiteralType     go to state 78
    Type            go to state 90
    OperandName     go to state 80
    SliceType       go to state 81
    MapType         go to state 82
    StructType      go to state 83
    PointerType     go to state 84
    ArrayType       go to state 85


State 43

  199 TypeDecl: TYPE LEFTPARAN . TypeSpecList RIGHTPARAN

    IDENTIFIER  shift, and go to state 44

    TypeSpecList  go to state 91
    TypeSpec      go to state 92
    AliasDecl     go to state 46
    TypeDef       go to state 47


State 44

  205 AliasDecl: IDENTIFIER . EQ Type
  206 TypeDef: IDENTIFIER . Type

    STRUCT      shift, and go to state 69
    MAP         shift, and go to state 70
    MUL         shift, and go to state 71
    EQ          shift, and go to state 93
    LEFTSQUARE  shift, and go to state 73
    IDENTIFIER  shift, and go to state 75

    PackageName     go to state 76
    QualifiedIdent  go to state 77
    LiteralType     go to state 78
    Type            go to state 94
    OperandName     go to state 80
    SliceType       go to state 81
    MapType         go to state 82
    StructType      go to state 83
    PointerType     go to state 84
    ArrayType       go to state 85


State 45

  200 TypeDecl: TYPE TypeSpec .

    $default  reduce using rule 200 (TypeDecl)


State 46

  203 TypeSpec: AliasDecl .

    $default  reduce using rule 203 (TypeSpec)


State 47

  204 TypeSpec: TypeDef .

    $default  reduce using rule 204 (TypeSpec)


State 48

    7 ImportDeclList: ImportDeclList ImportDecl . SCOLON

    SCOLON  shift, and go to state 95


State 49
